More fixes.